# aoc-cpp

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  aoc2023.cpp  aoc2024.cpp  day1.cpp  day1.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day2.hpp  day20.cpp  day20.hpp  day21.cpp  day22.cpp  day23.cpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.cpp  day6.hpp  day7.cpp  (+11 more)
2023/: day3.cpp  day3.hpp  day4.hpp  day9.cpp
2024/: day1.cpp  day1.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.hpp  day14.cpp  day14.hpp  day14_input  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day17.cpp  day2.cpp  day20.cpp  day20.hpp  day22.hpp  day24.cpp  day25.cpp  day4.cpp  day4.hpp  day5.cpp  day6.cpp  day6.hpp  day7.cpp  day7.hpp  day8.cpp  day8.hpp  day9.cpp  day9.hpp
2025/: day1.cpp  day2.hpp  day3.hpp  day4.cpp  day5.cpp  day5.hpp  day6.hpp  day7.cpp  day7.hpp  day8.cpp  day8.hpp  day9.cpp  gauss.cpp  gauss.hpp  z3_solver.cpp  z3_solver.hpp
